[project]
name = "wit"
version = "0.0.0"
description = "Een git voor documenten: content-addressed opslag met echte bestanden."
requires-python = ">=3.11"
dependencies = ["blake3>=0.4"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
wit = "wit.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
